--- a/custom_components/unifiprotect/translations/da.json
+++ b/custom_components/unifiprotect/translations/da.json
@@ -14,11 +14,23 @@
                     "port": "Port nummer: (7443 CloudKey+, 443 UDMP)",
                     "username": "Brugernavn",
                     "password": "Kodeord",
+                    "scan_interval": "Opdaterings frekvens for hændelser (Øg frekvens hvis mange kameraer)",
+                    "snapshot_direct": "Brug anonyme snapshots (Skal være aktiveret på alle kameraer)",
                     "ir_on": "Instilling til Infrarødt Lys TÆNDT",
                     "ir_off": "Instilling til Infrarødt Lys SLUKKET"
                 },
                 "description": "Konfigurer Unifi Protect for at monitorere kameraer og sensorer.",
                 "title": "Unifi Protect"
+            }
+        }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "data": {
+                    "snapshot_direct": "Brug anonyme snapshots (Skal være aktiveret på alle kameraer)",
+                    "scan_interval": "Opdaterings frekvens for hændelser (Øg frekvens hvis mange kameraer)"
+                }
             }
         }
     }
