--- a/custom_components/unifiprotect/translations/en.json
+++ b/custom_components/unifiprotect/translations/en.json
@@ -14,11 +14,23 @@
                     "port": "Port Number: (7443 CloudKey+, 443 UDMP)",
                     "username": "Username",
                     "password": "Password",
+                    "scan_interval": "Scan interval for Events (Set higher if many Cameras)",
+                    "snapshot_direct": "Use Anonymous Snapshots (Must be enabled on all Cameras)",
                     "ir_on": "Setting to use for Infrared Light ON",
                     "ir_off": "Setting to use for Infrared Light OFF"
                 },
                 "description": "Set up Unifi Protect to monitor cameras and sensors.",
                 "title": "Unifi Protect"
+            }
+        }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "data": {
+                    "snapshot_direct": "Use Anonymous Snapshots (Must be enabled on all Cameras)",
+                    "scan_interval": "Scan interval for Events (Set higher if many Cameras)"
+                }
             }
         }
     }
